[FEATURE]: Implemented swagger for ProductHandler
